--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,11 +1,13 @@
-<% places = Place.all %>
+<%  %>
 
-<h1>Places I've Been</h1>
+<h1>Places I've Been </h1>
  
 <ul>
-  <% for place in places %>
+  <% for place in @places %>
     <li>
+      <a href="/places/<%= place["id"] %>">
       <%= place["name"] %>
     </li>
   <% end %>
 </ul>
+<p><a href="/places/new">Create a Place</a></p>
