--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,12 +1,12 @@
-<%  %>
 
-<h1>Places I've Been </h1>
+<h1>Places I've Been</h1>
  
-<ul>
-  <% for place in @places %>
+ <ul>
+   <% for place in @places %>
     <li>
-      <a href="/places/<%= place["id"] %>">
-      <%= place["name"] %>
+      <a href="/places/<%= place["id"] %>"><%= place["name"] %></a>
     </li>
-  <% end %>
+   <% end %>
 </ul>
+
+<p><a href="/places/new">Create a new place </a></p>
