--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,10 +1,16 @@
 <h1>New Place</h1>
 
-<form action="/places" method="post">
+<%= form_with model: @place do |form| %>
   <p>
     <label for="name">Name</label>
     <input type="text" name="name">
   </p>
-
-  <button>Submit</button>
-</form>
+    <p>
+    <label for="date_visisted">Date Visited</label>
+    <input type="date" name="date_visited">
+  </p>  <p>
+    <label for="description">Description</label>
+    <input type="text" name="description">
+  </p>
+  <%= form.submit%>
+  <% end %>
