--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,15 +3,8 @@
 <h1><%= @place["name"]%></h1>
 
 
-<h3>Places</h3>
-
-<ul>
-  <li>Michael Scott</li>
-  <li>Dwight Schrute</li>
-</ul>
-
 <p>
-  <a href="">New Place</a>
+  <a href="">Create New Place</a>
 </p>
 
 <p>
