--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,10 +3,19 @@
 <h1><%= @place["name"]%></h1>
 
 
-<p>
-  <a href="">Create New Place</a>
-</p>
+<%  %>
+<ul>
+  <% for entry in @entries %>
+    
+     <h3> <%= entry["title"] %> </h3>
+     <h6> <%= entry["posted_on"] %> </h6>
+      <%= entry["description"] %>
+    
+  <% end %>
+</ul>
 
 <p>
-  <a href="/places/">Back to All Places</a>
+  <a href="/entries/new?place_id=<%= @place["id"] %>">New Entry</a>
 </p>
+
+<p><a href="/places">Back to Places </a></p>
